--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,6 +1,6 @@
 --upgrade pip
-pdfplumber==0.11.5
-pdfminer.six==20231228
-pandas==2.2.0
-streamlit==1.30.0
-PyMuPDF==1.23.3
+pdfplumber==0.11.5 --no-cache-dir
+pdfminer.six==20231228 --no-cache-dir
+pandas==2.2.0 --no-cache-dir
+streamlit==1.30.0 --no-cache-dir
+PyMuPDF==1.23.3 --no-cache-dir
